--- a/github/ci/prow-deploy/files/jobs/kubevirt/project-infra/project-infra-postsubmits.yaml
+++ b/github/ci/prow-deploy/files/jobs/kubevirt/project-infra/project-infra-postsubmits.yaml
@@ -896,10 +896,6 @@ postsubmits:
             value: "1.22.5"
           - name: TARGET_GITHUB_REPO
             value: kubevirt/ci-performance-benchmarks
-          - name: GIT_AUTHOR_NAME
-            value: kubevirt-bot
-          - name: GIT_AUTHOR_EMAIL
-            value: kubevirt-bot@kubevirt.io
           - name: GITHUB_TOKEN_PATH
             value: /etc/github/oauth
           command:
@@ -919,13 +915,10 @@ postsubmits:
               cd ..
               git clone "https://kubevirt-bot@github.com/$TARGET_GITHUB_REPO.git"
               cd ci-performance-benchmarks
-              git config user.email "$GIT_AUTHOR_EMAIL"
-              git config user.name "$GIT_AUTHOR_NAME"
               git checkout -b $BRANCH
             )
             CI_PERF_REPO_DIR=$(cd ../ci-performance-benchmarks && pwd)
 
-            cd ..
             robots/cmd/perf-report-creator/release-graph.sh "$CI_PERF_REPO_DIR" "$SINCE_DATE"
 
             cd "$CI_PERF_REPO_DIR"
@@ -934,7 +927,7 @@ postsubmits:
             mv "$CI_PERF_REPO_DIR"/weekly/vmi/release-index.html "$CI_PERF_REPO_DIR"/$RELEASE_DIR/periodic-kubevirt-e2e-k8s-sig-performance/vmi
             mv "$CI_PERF_REPO_DIR"/weekly/vm/release-index.html "$CI_PERF_REPO_DIR"/$RELEASE_DIR/periodic-kubevirt-e2e-k8s-sig-performance/vm
             
-            git-pr.sh -c "git clean -fd weekly" -T main -r ci-performance-benchmarks -m "$CI_PERF_REPO_DIR" -b $BRANCH -l $GIT_AUTHOR_NAME -n $GIT_AUTHOR_EMAIL -d "echo 'Adding performance benchmarks data for release $RELEASE_VERSION (since $SINCE_DATE). This includes:\n- VMI performance metrics from periodic-kubevirt-e2e-k8s-sig-performance\n- VM performance metrics from periodic-kubevirt-e2e-k8s-sig-performance\n'" -s "Add performance benchmarks for release $RELEASE_VERSION" -B "Performance Benchmarks: Release $RELEASE_VERSION ($SINCE_DATE to present)" -D true
+            git-pr.sh -c "git clean -fd weekly && git add $RELEASE_DIR" -T main -r ci-performance-benchmarks -m "$CI_PERF_REPO_DIR" -b $BRANCH -d "echo 'Add release $RELEASE_VERSION performance benchmarks data'" -B "Add release $RELEASE_VERSION performance benchmarks data via automation" -D true
 
             echo "PR created successfully"
             echo "Process completed successfully." 
